--- a/section6/v1-springboot/Loan/src/main/resources/application.yml
+++ b/section6/v1-springboot/Loan/src/main/resources/application.yml
@@ -14,3 +14,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yaml"
+      - "application_prod.yaml"
+  profiles:
+    active:
+      - "qa"
+
+
+build:
+  version: "loan-1.1"
+
+loan:
+  message: "Welcome to Loan Microservice local API"
+  contactDetails:
+    email: "0fX2I@example.com"
+    name: "Loans Team"
+  onCallSupport:
+    - (555) 555-5555
+    - (242) 424-2424
