--- a/section6/v2-spring-cloud-config/accounts/pom.xml
+++ b/section6/v2-spring-cloud-config/accounts/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>accounts</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Accounts</name>
+	<name>accounts</name>
 	<description>Accounts Microservices</description>
 	<url/>
 	<licenses>
