--- a/section6/v2-spring-cloud-config/loan/pom.xml
+++ b/section6/v2-spring-cloud-config/loan/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bk.eazybytes</groupId>
-	<artifactId>card</artifactId>
+	<artifactId>loan</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Card</name>
-	<description>Microservice for Cards</description>
+	<name>loan</name>
+	<description>Loan Session for Microservices</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -67,24 +67,12 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>3.3.2</version>
 				<configuration>
 					<from>
-							<image>eclipse-temurin:21-jre</image>
+						<image>eclipse-temurin:21-jre</image>
 					</from>
 					<to>
 						<image>john3kuae/${project.artifactId}:s6</image>
