--- a/section6/v2-spring-cloud-config/cards/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/cards/src/main/resources/application.yml
@@ -1,17 +1,15 @@
 server:
-  port: 8080
-
+  port: 9000
 spring:
   application:
-    name: "accounts"
+    name: "cards"
   profiles:
-      active: "prod"
+    active: "prod"
   datasource:
-    url: jdbc:h2:mem:accounts
-    driver-class-name: org.h2.Driver
-    hikari:
-      username: sa
-      password: ''
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
   h2:
     console:
       enabled: true
