--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
     config:
       server:
         native:
-          search-locations: "classpath:/config"
+          search-locations: "file:///D:/WorkSpace/SpringBootKubernetes/section6/v2-spring-cloud-config/file-system-config"
+#          search-locations: "classpath:/config"
+
+
+
 server:
   port: 8071
+encrypt:
+  key: "12345678901234567890123456789012"
