--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -2,13 +2,20 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+#    active: native
+    active: git
   cloud:
     config:
       server:
-        native:
+#        native:
 #          search-locations: "file:///D:/WorkSpace/SpringBootKubernetes/section6/v2-spring-cloud-config/file-system-config"
-          search-locations: "classpath:/config"
+#          search-locations: "classpath:/config"
+        git:
+          uri: "https://github.com/boonkuaeb/eazybytes-config.git"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
 
 
 encrypt:
