--- a/section6/v2-spring-cloud-config/accounts/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/accounts/src/main/resources/application.yml
@@ -22,6 +22,12 @@ spring:
     show-sql: true
   config:
     import: "configserver:http://localhost:8071/"
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
+
 
 management:
   endpoints:
