89. Refresh config at runtime using Spring Cloud Bus & Spring Cloud Config monitor

--- a/section6/v2-spring-cloud-config/accounts/pom.xml
+++ b/section6/v2-spring-cloud-config/accounts/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>com.bk</groupId>
 		<artifactId>eazybytes</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>s6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bk.eazybytes</groupId>
 	<artifactId>accounts</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${image.build.version}</version>
 	<name>accounts</name>
 	<packaging>jar</packaging>
 
