--- a/section6/v2-spring-cloud-config/loans/pom.xml
+++ b/section6/v2-spring-cloud-config/loans/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>com.bk</groupId>
 		<artifactId>eazybytes</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>s6</version>
 	</parent>
 	<groupId>com.bk.eazybytes</groupId>
 	<artifactId>loans</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${image.build.version}</version>
 	<packaging>jar</packaging>
 	<name>loans</name>
 	<description>Loan Session for Microservices</description>
@@ -26,7 +26,7 @@
 						<image>eclipse-temurin:21-jre</image>
 					</from>
 					<to>
-						<image>john3kuae/${project.artifactId}:s6</image>
+						<image>john3kuae/${project.artifactId}:${image.build.version}</image>
 					</to>
 				</configuration>
 			</plugin>
