--- a/section6/v2-spring-cloud-config/cards/pom.xml
+++ b/section6/v2-spring-cloud-config/cards/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.bk</groupId>
 		<artifactId>eazybytes</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>s6</version>
 	</parent>
 	<groupId>com.bk.eazybytes</groupId>
 	<artifactId>cards</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${image.build.version}</version>
 	<packaging>jar</packaging>
 	<name>cards</name>
 	<description>Microservice for Cards</description>
