--- a/section6/v2-spring-cloud-config/configserver/pom.xml
+++ b/section6/v2-spring-cloud-config/configserver/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.bk.eazybytes</groupId>
 	<artifactId>configserver</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>s6</version>
 	<name>configserver</name>
 	<description>Configserver for eazybytes</description>
 	<url/>
@@ -29,6 +29,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<image.build.version>s6</image.build.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -70,8 +71,17 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<from>
+						<image>eclipse-temurin:21-jre</image>
+					</from>
+					<to>
+						<image>john3kuae/${project.artifactId}:${image.build.version}</image>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
