--- a/section6/v2-spring-cloud-config/pom.xml
+++ b/section6/v2-spring-cloud-config/pom.xml
@@ -2,12 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <properties>
+        <image.build.version>s6</image.build.version>
+        <java.version>21</java.version>
+        <spring-cloud.version>2023.0.3</spring-cloud.version>
+    </properties>
     <packaging>pom</packaging>
     <modules>
         <module>accounts</module>
         <module>cards</module>
         <module>loans</module>
-
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -17,13 +21,10 @@
     </parent>
     <groupId>com.bk</groupId>
     <artifactId>eazybytes</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${image.build.version}</version>
     <name>eazybytes</name>
     <description>Demo project for Spring Boot</description>
-    <properties>
-        <java.version>21</java.version>
-        <spring-cloud.version>2023.0.3</spring-cloud.version>
-    </properties>
+
 
     <dependencies>
         <dependency>
