--- a/section7/accounts/pom.xml
+++ b/section7/accounts/pom.xml
@@ -34,6 +34,14 @@
 		<tag/>
 		<url/>
 	</scm>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
