--- a/section7/accounts/src/main/resources/application.yml
+++ b/section7/accounts/src/main/resources/application.yml
@@ -7,19 +7,14 @@ spring:
   profiles:
       active: "prod"
   datasource:
-    url: jdbc:h2:mem:accounts
-    driver-class-name: org.h2.Driver
-    hikari:
-      username: sa
-      password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/accountsdb
+    username: root
+    password: root
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
+  sql:
+    init:
+      mode: always
   config:
     import: "optional:configserver:http://localhost:8071/"
 
