--- a/section7/cards/pom.xml
+++ b/section7/cards/pom.xml
@@ -14,6 +14,13 @@
 	<name>cards</name>
 	<description>Microservice for Cards</description>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
