--- a/section7/loans/pom.xml
+++ b/section7/loans/pom.xml
@@ -15,6 +15,13 @@
 	<name>loans</name>
 	<description>Loan Session for Microservices</description>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
