100. Update docker compose file to create & use MySQL DB

--- a/section7/accounts/pom.xml
+++ b/section7/accounts/pom.xml
@@ -5,16 +5,13 @@
 	<parent>
 		<groupId>com.bk</groupId>
 		<artifactId>eazybytes</artifactId>
-		<version>s6</version>
+		<version>s7</version>
 	</parent>
-	<properties>
-		<image.build.version>s6</image.build.version>
-	</properties>
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bk.eazybytes</groupId>
 	<artifactId>accounts</artifactId>
-	<version>s6</version>
 	<name>accounts</name>
 	<packaging>jar</packaging>
 
@@ -53,7 +50,7 @@
 						<image>eclipse-temurin:21-jre</image>
 					</from>
 					<to>
-						<image>john3kuae/${project.artifactId}:${image.build.version}</image>
+						<image>john3kuae/eazybytes-${project.artifactId}:${image.build.version}</image>
 					</to>
 				</configuration>
 			</plugin>
