--- a/section7/configserver/pom.xml
+++ b/section7/configserver/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.bk.eazybytes</groupId>
 	<artifactId>configserver</artifactId>
-	<version>s6</version>
+	<version>s7</version>
 	<name>configserver</name>
 	<description>Configserver for eazybytes</description>
 	<url/>
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
-		<image.build.version>s6</image.build.version>
+		<image.build.version>s7</image.build.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,7 +71,7 @@
 						<image>eclipse-temurin:21-jre</image>
 					</from>
 					<to>
-						<image>john3kuae/${project.artifactId}:${image.build.version}</image>
+						<image>john3kuae/eazybytes-${project.artifactId}:${image.build.version}</image>
 					</to>
 				</configuration>
 			</plugin>
