--- a/section7/accounts/src/main/resources/application.yml
+++ b/section7/accounts/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
     url: jdbc:mysql://localhost:3306/accountsdb
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
   sql:
