--- a/section7/loans/src/main/resources/application.yml
+++ b/section7/loans/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     url: jdbc:mysql://localhost:3307/loansdb
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
   sql:
