110. Make code changes in Accounts microservice to connect Eureka Server

--- a/section8/accounts/src/main/resources/application.yml
+++ b/section8/accounts/src/main/resources/application.yml
@@ -23,10 +23,30 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8071/"
 
-
-
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      unrestricted: true
+
+  info:
+    env:
+      enabled: true
+
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+info:
+  app:
+    name: ${spring.application.name}
+    description: "Eazy Bank Accounts Application"
+    version: "1.0.0"
