--- a/section8/pom.xml
+++ b/section8/pom.xml
@@ -38,6 +38,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -79,10 +86,9 @@
             <version>2.6.0</version>
         </dependency>
 
+
+
     </dependencies>
-
-
-
 
     <dependencyManagement>
         <dependencies>
