--- a/section8/configserver/pom.xml
+++ b/section8/configserver/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>21</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
 		<image.build.version>s8</image.build.version>
+		<start-class>com.bk.eazybytes.configserver.ConfigServerApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,7 +70,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<from>
-						<image>eclipse-temurin:21-jre</image>
+						<image>eclipse-temurin:21-jre@sha256:b2fd6f29dbdd6f32ca735a828f8e6f0d2cdcd941c02c94ac6cedaa9c58e8113b</image>
 					</from>
 					<to>
 						<image>john3kuae/eazybytes-${project.artifactId}:${image.build.version}</image>
