--- a/section8/docker-compose/default/docker-compose.yml
+++ b/section8/docker-compose/default/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "john3kuae/configserver:s6"
+    image: "john3kuae/configserver:s8
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -34,7 +34,7 @@ services:
       service: microservice-base-config
 
   accounts:
-    image: "john3kuae/accounts:s6"
+    image: "john3kuae/accounts:s8
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -48,7 +48,7 @@ services:
       service: microservice-configserver-config
 
   loans:
-    image: "john3kuae/loans:s6"
+    image: "john3kuae/loans:s8
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -62,7 +62,7 @@ services:
       service: microservice-configserver-config
 
   cards:
-    image: "john3kuae/cards:s6"
+    image: "john3kuae/cards:s8
     container_name: cards-ms
     ports:
       - "9000:9000"
