--- a/section8/loans/pom.xml
+++ b/section8/loans/pom.xml
@@ -14,7 +14,9 @@
 	<packaging>jar</packaging>
 	<name>loans</name>
 	<description>Loan Session for Microservices</description>
-
+	<properties>
+		<start-class>com.bk.eazybytes.cards.LoanApplication</start-class>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -23,7 +25,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<from>
-						<image>eclipse-temurin:21-jre</image>
+						<image>eclipse-temurin:21-jre@sha256:b2fd6f29dbdd6f32ca735a828f8e6f0d2cdcd941c02c94ac6cedaa9c58e8113b</image>
 					</from>
 					<to>
 						<image>john3kuae/eazybytes-${project.artifactId}:${image.build.version}</image>
