119. Starting all the microservices using docker compose file

--- a/section8/loans/pom.xml
+++ b/section8/loans/pom.xml
@@ -15,7 +15,7 @@
 	<name>loans</name>
 	<description>Loan Session for Microservices</description>
 	<properties>
-		<start-class>com.bk.eazybytes.cards.LoanApplication</start-class>
+		<start-class>com.bk.eazybytes.loans.LoanApplication</start-class>
 	</properties>
 	<build>
 		<plugins>
