--- a/section8/docker-compose/default/docker-compose.yml
+++ b/section8/docker-compose/default/docker-compose.yml
@@ -1,28 +1,9 @@
 services:
-  rabbit:
-    image: rabbitmq:3.13-management
-    hostname: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck:
-      test: rabbitmq-diagnostics check_port_connectivity
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 5s
-    extends:
-      file: common-config.yml
-      service: network-deploy-service
-
   configserver:
-    image: "john3kuae/configserver:s8
+    image: "john3kuae/eazybytes-configserver:s8"
     container_name: configserver-ms
     ports:
       - "8071:8071"
-    depends_on:
-      rabbit:
-        condition: service_healthy
     healthcheck:
       test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -33,47 +14,59 @@ services:
       file: common-config.yml
       service: microservice-base-config
 
-  accounts:
-    image: "john3kuae/accounts:s8
-    container_name: accounts-ms
+  eurekaserver:
+    image: "john3kuae/eazybytes-eurekaserver:s8"
+    container_name: eurekaserver-ms
     ports:
-      - "8080:8080"
+      - "8070:8070"
     depends_on:
       configserver:
         condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
+
+
+  accounts:
+    image: john3kuae/eazybytes-accounts:s8
+    container_name: accounts-ms
+    ports:
+      - "8080:8080"
     environment:
       SPRING_APPLICATION_NAME: "accounts"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
   loans:
-    image: "john3kuae/loans:s8
+    image: john3kuae/eazybytes-loans:s8
     container_name: loans-ms
     ports:
       - "8090:8090"
-    depends_on:
-      configserver:
-        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
   cards:
-    image: "john3kuae/cards:s8
+    image: john3kuae/eazybytes-cards:s8
     container_name: cards-ms
     ports:
       - "9000:9000"
-    depends_on:
-      configserver:
-        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
 networks:
   eazybank:
