--- a/section8/docker-compose/default/docker-compose.yml
+++ b/section8/docker-compose/default/docker-compose.yml
@@ -57,6 +57,17 @@ services:
       file: common-config.yml
       service: microservice-eurekaserver-config
 
+  loans1:
+    image: john3kuae/eazybytes-loans:s8
+    container_name: loans-ms1
+    ports:
+      - "8091:8090"
+    environment:
+      SPRING_APPLICATION_NAME: "loans"
+    extends:
+      file: common-config.yml
+      service: microservice-eurekaserver-config
+
   cards:
     image: john3kuae/eazybytes-cards:s8
     container_name: cards-ms
