--- a/section8/docker-compose/prod/docker-compose.yml
+++ b/section8/docker-compose/prod/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   configserver:
-    image: "john3kuae/eazybytes-configserver:s8
+    image: "john3kuae/eazybytes-configserver:s8"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -15,10 +15,13 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: "john3kuae/eazybytes-eurekaserver:s8
+    image: "john3kuae/eazybytes-eurekaserver:s8"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
+    depends_on:
+      configserver:
+        condition: service_healthy
     healthcheck:
       test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -27,15 +30,13 @@ services:
       start_period: 10s
     extends:
       file: common-config.yml
-      service: microservice-base-config
-    depends_on:
-      configserver:
-        condition: service_healthy
+      service: microservice-configserver-config
     environment:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
+
   accounts:
-    image: "john3kuae/eazybytes-accounts:s8
+    image: john3kuae/eazybytes-accounts:s8
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -43,10 +44,10 @@ services:
       SPRING_APPLICATION_NAME: "accounts"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
   loans:
-    image: "john3kuae/eazybytes-loans:s8
+    image: john3kuae/eazybytes-loans:s8
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -54,10 +55,10 @@ services:
       SPRING_APPLICATION_NAME: "loans"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
   cards:
-    image: "john3kuae/eazybytes-cards:s8
+    image: john3kuae/eazybytes-cards:s8
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -65,7 +66,7 @@ services:
       SPRING_APPLICATION_NAME: "cards"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
 networks:
   eazybank:
