--- a/section9/gatewayserver/src/main/resources/application.yml
+++ b/section9/gatewayserver/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: "gatewayserver"
@@ -9,7 +8,7 @@ spring:
       discovery:
         locator:
           enabled: true
-          lowerCaseServiceId: true
+          lower-case-service-id: true
 
 management:
   endpoints:
