131. Implementing Cross cutting concerns Tracing & Logging using Gateway - Part 1

--- a/section9/gatewayserver/src/main/resources/application.yml
+++ b/section9/gatewayserver/src/main/resources/application.yml
@@ -27,3 +27,7 @@ info:
     name: "gatewayserver"
     description: "Eazy Bank Gateway Server Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com.bk.gatewayserver: DEBUG
