131. Implementing Cross cutting concerns Tracing & Logging using Gateway - Part 1

--- a/section9/accounts/src/main/resources/application.yml
+++ b/section9/accounts/src/main/resources/application.yml
@@ -51,3 +51,6 @@ info:
     name: ${spring.application.name}
     description: "Eazy Bank Accounts Application"
     version: "1.0.0"
+logging:
+  level:
+    com.bk: DEBUG
