--- a/section9/loans/src/main/resources/application.yml
+++ b/section9/loans/src/main/resources/application.yml
@@ -50,3 +50,6 @@ info:
     name: ${spring.application.name}
     description: "Eazy Bank Loans Application"
     version: "1.0.0"
+logging:
+  level:
+    com.bk: DEBUG
